--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,6 @@
+[user]
+	name = Roman Pronskiy
+	email = roman@pronskiy.com
 [alias]
 	# View abbreviated SHA, description, and history graph of the latest 20 commits
 	l = log --pretty=oneline -n 20 --graph --abbrev-commit
@@ -23,6 +26,16 @@
 	credit = "!f() { git commit --amend --author \"$1 <$2>\" -C HEAD; }; f"
 	# Interactive rebase with the given number of latest commits
 	reb = "!r() { git rebase -i HEAD~$1; }; r"
+	
+	# My
+	lg = log --pretty=format:'%h was %an, %ar, message: %s' --graph
+	st = status -sb
+	who = shortlog -s --
+	bra = branch -a
+	pr = pull --rebase
+	in = "!git remote update -p; git log ..@{u}"
+	out = log @{u}..
+	backup = !file=../`git describe`.tar && echo \"Creating `readlink -f $file`\" && tar cf $file .
 
 [apply]
 	# Detect whitespace errors when applying a patch
@@ -38,6 +51,10 @@
 	# [default] space-before-tab: looks for spaces before tabs at the beginning of
 	# a line
 	whitespace = space-before-tab,indent-with-non-tab,trailing-space
+	
+	# 
+	autocrlf = input
+	safecrlf = true
 
 [color]
 	# Use colors in Git commands that are capable of colored output when
@@ -76,3 +93,11 @@
 
 [push]
 	default = matching
+	
+	
+[difftool "sourcetree"]
+	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
+	path = 
+[mergetool "sourcetree"]
+	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+	trustExitCode = true
