--- a/.gitconfig
+++ b/.gitconfig
@@ -39,7 +39,7 @@
 
 [apply]
 	# Detect whitespace errors when applying a patch
-	whitespace = fix
+#	whitespace = fix
 
 [core]
 	# Use custom `.gitignore` and `.gitattributes`
@@ -50,11 +50,11 @@
 	# [default] trailing-space: looks for spaces at the end of a line
 	# [default] space-before-tab: looks for spaces before tabs at the beginning of
 	# a line
-	whitespace = space-before-tab,indent-with-non-tab,trailing-space
+#	whitespace = space-before-tab,indent-with-non-tab,trailing-space
 	
 	# 
 	autocrlf = input
-	safecrlf = true
+	safecrlf = warn
 
 [color]
 	# Use colors in Git commands that are capable of colored output when
