--- a/.gitconfig
+++ b/.gitconfig
@@ -95,7 +95,7 @@
 [apply]
 
 	# Detect whitespace errors when applying a patch
-	whitespace = fix
+#	whitespace = fix
 
 [core]
 
@@ -106,7 +106,7 @@
 	# Treat spaces before tabs and all kinds of trailing whitespace as an error
 	# [default] trailing-space: looks for spaces at the end of a line
 	# [default] space-before-tab: looks for spaces before tabs at the beginning of a line
-	whitespace = space-before-tab,-indent-with-non-tab,trailing-space
+	# whitespace = space-before-tab,-indent-with-non-tab,trailing-space
 
 	# Make `git rebase` safer on macOS
 	# More info: <http://www.git-tower.com/blog/make-git-rebase-safe-on-osx/>
@@ -116,9 +116,9 @@
 	# http://michael-kuehnel.de/git/2014/11/21/git-mac-osx-and-german-umlaute.html
 	precomposeunicode = false
 
-	# 
+	#
 	autocrlf = input
-	safecrlf = true
+	safecrlf = warn
 
 [color]
 
